# Modelguard

./: .gitignore  COMPREHENSIVE_TEST_EXPANSION_SUMMARY.md  CONTRIBUTING.md  FIXES_APPLIED_SUMMARY.md  INSTALL.md  LICENSE  PERFORMANCE_BENCHMARK_REPORT.md  PROJECT_STATUS.md  PYPI_SUBMISSION_GUIDE.md  README.md  TEST_COVERAGE_REPORT.md  modelguard.yaml.example  pyproject.toml  pytest.ini  setup_dev.py  test_basic.py  test_colab_compatibility.py
examples/: 1-Detect-Bad-Models-Colab.ipynb  1-Detect-Bad-Models.ipynb  basic_usage.py  detect_bad_models_demo.py
src/modelguard/: __init__.py  cli.py  context.py
src/modelguard/core/: __init__.py  exceptions.py  logging.py  opcodes.py  policy.py  scanner.py  signature.py
src/modelguard/loaders/: __init__.py  onnx.py  sklearn.py  tensorflow.py  torch.py
tests/: __init__.py  test_cli.py  test_context.py  test_coverage_expansion.py  test_integration.py  test_loaders.py  test_performance.py  test_performance_enhanced.py  test_policy.py  test_report_generator.py  test_scanner.py  test_scanner_enhanced.py  test_signature.py
